--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Thu May 15 01:28:58 UTC 2025
+#Thu May 15 01:36:23 UTC 2025
 allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
@@ -31,7 +31,7 @@ max-tick-time=60000
 max-world-size=29999984
 motd=§r              §5§l(MSX)  §dHosting Gratuito§r\n          §f§nhttps\://discord.gg/w9xt8ydNZe
 network-compression-threshold=256
-online-mode=false
+online-mode=true
 op-permission-level=4
 player-idle-timeout=0
 prevent-proxy-connections=false
